Fix no margin at Home on small screens

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -72,7 +72,6 @@
 
 @media (max-width: 600px) {
   .c-home {
-    margin-left: 0;
     margin-inline: 40px;
   }
 
